--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #jpa
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # logging configuration
 logging.path=/var/log
@@ -14,3 +15,8 @@ logging.file=evm.log
 logging.level.org.springframework=INFO
 logging.level.com.event.management=DEBUG
 logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+
+spring.freemarker.template-loader-path=/WEB-INF/ftl
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-spring-macro-helpers=true
